--- a/templates/WAM_APP_FRED/test_map_layout.html
+++ b/templates/WAM_APP_FRED/test_map_layout.html
@@ -156,10 +156,10 @@
                             <form id="wd_timespan">
 
                               <div>Start date
-                                {{start_date}}
+                                {{wd_start_date}}
                               </div>
                               <div>End date
-                                {{end_date}}
+                                {{wd_end_date}}
                               </div>
                             </form>
                           </div>
@@ -183,6 +183,21 @@
                       Currently the plot in the popup window
                       shows data received from a test data set.
                     </p>
+                    <div id="fd-forms">
+                      <form id="fd_timespan">
+
+                        <div>Start date
+                          {{fd_start_date}}
+                        </div>
+                        <div>End date
+                          {{fd_end_date}}
+                        </div>
+                      </form>
+
+                      <form id="fd_technology">
+                        {{fd_technology}}
+                      </form>
+                    </div>
                     <!--<div id="feedin-plot" style="width:300px;height:250px;">
                     </div>-->
                   </div>
