Implement search of powerplants with nuts
The srid of the rea_geom_new is not specified in the case of
OEP_DIALECT, so geom is used instead to display points

--- a/templates/WAM_APP_FRED/test_map_layout.html
+++ b/templates/WAM_APP_FRED/test_map_layout.html
@@ -688,7 +688,7 @@
       // request all power plants contained in selected region
       // also include the generation_type option
       function loadRegionPowerPlants(region, layer) {
-        region_name = region.feature.properties.name;
+        region_name = region.feature.properties.region;
         generation_type = $("input[name=generation_type]:checked").val();
         //set the spinner
         if (map.spin)
