Fix wrong function call

--- a/templates/WAM_APP_FRED/test_map_layout.html
+++ b/templates/WAM_APP_FRED/test_map_layout.html
@@ -657,7 +657,7 @@
         pointToLayer: createCircles,
         onEachFeature: function(feature, layer) {
           layer.bindPopup('Loading...');
-          layer.on('click', onFeedinPointClick);
+          layer.on('click', onPowerPlantDataPointClick);
         }
       };
 
