Build the OEP query to the OEDB for Feedinlib

--- a/templates/WAM_APP_FRED/test_map_layout.html
+++ b/templates/WAM_APP_FRED/test_map_layout.html
@@ -882,6 +882,7 @@
         var popup = marker.getPopup();
         var latlng = marker.getLatLng();
         var landkreis_props = marker.feature.properties;
+        landkreis_props.technology = $("#id_fd-technology").val();
         // TODO : this need to be linked to user choice for wd_timespan
         //
         if (marker.feature.properties.timespan) {
