Add axis labels to plot

--- a/templates/WAM_APP_FRED/test_map_layout.html
+++ b/templates/WAM_APP_FRED/test_map_layout.html
@@ -865,6 +865,12 @@
             {
               margin: {
                 t: 0
+              },
+              xaxis: {
+                title: {text: 'Time'}
+              },
+              yaxis: {
+                title: {text: 'MW'}
               }
             }
           );
