--- a/templates/WAM_APP_FRED/test_map_layout.html
+++ b/templates/WAM_APP_FRED/test_map_layout.html
@@ -351,21 +351,7 @@
 
     var update_heights = "{% url 'WAM_APP_FRED:update_variable_heights' %}";
 
-    //update the available heights depending on the choice of variable
-    $("#id_wd-variable").change(function(event) {
-      const variable_id = event.currentTarget.value; // get the selected variable ID from the HTML input
-      $.ajax({
-        url: update_heights,
-        async: true,
-        data: {
-          'variable_id': variable_id // add the country id to the GET parameters
-        },
-        success: function(data) { // `data` is the return of the `load_heights` view function
-          $("#id_wd-height").html(data); // replace the contents of the height input with the data that came from the server
-        }
-      });
 
-    });
 
     function map_init_basic(map, options) {
       var popup = L.popup();
@@ -387,26 +373,45 @@
         var marker = wdl.getLayer(feature.properties.leaflet_id);
 
         var popup = marker.getPopup();
-        const user_height = $('#id_wd-height').val();
-        console.log(feature.properties.data)
-        const variable = feature.properties.variable
-        var popupContent = '<h4> Variable_id :' + variable +
-          ' Height ' + user_height + ' m' +
-          '</h4></br><div id="tester" style="width:300px;height:250px;"></div>';
-        popup.setContent(popupContent)
+        const user_height = $('select[id=id_wd-height] option:selected').val();
+        const variable = $('select[id=id_wd-variable] option:selected').text();
 
 
-        marker.feature.properties = feature.properties
-        TESTER = document.getElementById('tester');
-        var height = feature.properties.heights[0];
-        Plotly.plot(TESTER, [{
-          x: feature.properties.data[user_height]['x'],
-          y: feature.properties.data[user_height]['y']
-        }], {
-          margin: {
-            t: 0
-          }
-        });
+        var popupContent = '<h4>  Height ' + user_height + ' m</h4></br>';
+
+        if (feature.properties.data[user_height]) {
+          popupContent = popupContent + '<div id="tester" style="width:300px;height:250px;"></div>';
+
+          popup.setContent(popupContent);
+
+          marker.feature.properties = feature.properties
+          TESTER = document.getElementById('tester');
+          var height = feature.properties.heights[0];
+          Plotly.plot(
+            TESTER,
+            [{
+              x: feature.properties.data[user_height]['x'],
+              y: feature.properties.data[user_height]['y']
+            }], {
+              margin: {
+                t: 0
+              },
+              xaxis: {
+                title: {
+                  text: 'Time'
+                }
+              },
+              yaxis: {
+                title: {
+                  text: variable
+                }
+              }
+            });
+        } else {
+          popupContent = popupContent + 'There is no records for this height';
+          popup.setContent(popupContent);
+        }
+
       }
 
       function onWeatherDataPointClick(event) {
@@ -423,7 +428,7 @@
         const stop_month = $('#id_wd_timespan_stop-month').val();
 
         const variable_id = $('select[id=id_wd-variable] option:selected').val();
-        if (marker.feature.properties.variable) {
+        if (marker.feature.properties.variable == variable_id) {
           // do not fetch the data a second time
           console.log('not fetching data a second time')
           displayWeatherDataPoint(marker.feature)
@@ -1036,21 +1041,43 @@
         });
 
 
+
+      function wdControlChanged(event) {
+        marker = wdl.getLayers()[0];
+        // if yes, then resimulate a userlick on the marker to update the popup
+        if (marker) {
+          if (marker.isPopupOpen()) {
+            marker.fire('click');
+          }
+        }
+      }
+
+      wd_controls = [
+        //"id_wd_timespan_start-year",
+        //"id_wd_timespan_stop-year",
+        //"id_wd_timespan_start-month",
+        //"id_wd_timespan_stop-month",
+        //"id_wd-variable",
+        "id_wd-height",
+      ]
+
+      for (const element of wd_controls) {
+        document.getElementById(element).addEventListener(
+          "change",
+          wdControlChanged
+        );
+      }
+
+
       function feedinControlChanged(event) {
         marker = fdl.getLayers()[0];
         // if yes, then resimulate a userlick on the marker to update the popup
-        if (marker) {
+        if (marker && marker.isPopupOpen()) {
           marker.fire('click');
         }
       }
 
       fd_controls = [
-        "id_wd_timespan_start-year",
-        "id_wd_timespan_stop-year",
-        "id_wd_timespan_start-month",
-        "id_wd_timespan_stop-month",
-        "id_wd-variable",
-        "id_wd-height",
         "id_fd-technology"
       ]
 
@@ -1060,6 +1087,25 @@
           feedinControlChanged
         );
       }
+
+      //update the available heights depending on the choice of variable
+      $("#id_wd-variable").change(function(event) {
+        const variable_id = event.currentTarget.value; // get the selected variable ID from the HTML input
+        $.ajax({
+          url: update_heights,
+          async: true,
+          data: {
+            'variable_id': variable_id // add the country id to the GET parameters
+          },
+          success: function(data) { // `data` is the return of the `load_heights` view function
+            $("#id_wd-height").html(data); // replace the contents of the height input with the data that came from the server
+            wdControlChanged(event);
+          }
+        });
+
+      });
+
+
 
     };
   </script>
